tests/cycle/cycle.exp
Error: B.js:5
  5: module.exports = B;
                      ^ B. Could not resolve name


Found 1 error
